<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">News App</string>
    <string name="no_news_found">No news found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="news_settings_title">News Settings</string>
    <string name="order_recent_label">Most Recent</string>
    <string name="order_relevant_label">Most Relevant</string>
    <string name="order_old_label">Oldest</string>
    <string name="order_recent_value" translatable="false">newest</string>
    <string name="order_old_value" translatable="false">oldest</string>
    <string name="order_relevant_value" translatable="false">relevance</string>
    <string name="settings_order_by_label">Order by:</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/order_recent_value</string>
    <string name="settings_search_by_label">Search By:</string>
    <string name="settings_search_by_key" translatable="false">search?q</string>
    <string name="settings_search_by_default" translatable="false">@string/search_by_default</string>
    <string name="search_by_default">world</string>
    <string name="settings_number_articles_label">News results:</string>
    <string name="settings_number_articles_key" translatable="false">number_of_articles</string>
    <string name="settings_number_articles_default" translatable="false">@string/articles_default</string>
    <string name="articles_default">13</string>
    <string name="written_by">Author:\n</string>
</resources>
